<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMuscleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:text="@string/muscle_group"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/cbChest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chest" />

            <CheckBox
                android:id="@+id/cbBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back" />

            <CheckBox
                android:id="@+id/cbShoulders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoulders" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/cbArms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arms" />

            <CheckBox
                android:id="@+id/cbLegs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legs" />

            <CheckBox
                android:id="@+id/cbAbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abs" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Seleccionar"
        android:layout_marginBottom="20dp"/>


</androidx.appcompat.widget.LinearLayoutCompat>