<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.ExerciseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayoutUp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/iBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_workout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/workout"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvEdit"
            app:layout_constraintStart_toEndOf="@+id/iBtnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="25dp"
            android:gravity="center_vertical"
            android:text="@string/edit"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWorkoutName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/cards"
        app:layout_constraintBottom_toTopOf="@+id/btnMuscleGroups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consLayoutUp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etWorkoutname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMuscleGroups"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/card_rv"
        android:text="@string/muscle_group"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilWorkoutName" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_description"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tilDescriptionWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMuscleGroups" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescriptionWorkout"
        android:layout_width="300dp"
        android:layout_height="250dp"
        app:boxBackgroundColor="@color/cards"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDescriptionWorkout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:layout_margin="0dp"
            android:gravity="top"
            android:textSize="12sp"
            android:textStyle="bold"
            android:tooltipText="Nombre del ejercicio" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/card_rv"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/myBottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDescriptionWorkout" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/myBottomNavigation"
        style="@style/My_Bottom_Navigation"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:itemActiveIndicatorStyle="@android:color/transparent"
        app:labelVisibilityMode="selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>