<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvExercise"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/cards"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:id="@+id/sessionContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_fitness"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/tvCVExerciseName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="start|center_vertical"
                android:paddingStart="20dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black" />
            
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSerie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/serie"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvKg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvKg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/kg"
                android:gravity="center"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvReps"
                app:layout_constraintStart_toEndOf="@id/tvSerie"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvReps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/reps"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvKg"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/contentSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </LinearLayout>
    
</androidx.cardview.widget.CardView>