<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.HistoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayoutUp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/iBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_workout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/history"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvDel"
            app:layout_constraintStart_toEndOf="@+id/iBtnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="25dp"
            android:gravity="center_vertical"
            android:text="@string/delete"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"

        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/bottom_bar"
        android:text="@string/date"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consLayoutUp" />

    <TextView
        android:id="@+id/tvNameSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDate"
        app:layout_constraintBottom_toTopOf="@id/scrollSeries"/>


    <ScrollView
        android:id="@+id/scrollSeries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/myBottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameSession">

        <LinearLayout
            android:id="@+id/containerSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical" />

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/myBottomNavigation"
        style="@style/My_Bottom_Navigation"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:itemActiveIndicatorStyle="@android:color/transparent"
        app:labelVisibilityMode="selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>